adding new feature in new name file

--- a/new.html
+++ b/new.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>New html file after index</h1>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores, minima.</p>
+    <Button>CLICK HERE</Button>
 </body>
 </html>
